--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio</title>
+     
     <link rel="icon" href="../assets/mikuHacking.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="../styles/habilidades.css">
+    <link rel="stylesheet" href="../styles/experiencia.css">
+    <link rel="stylesheet" href="../styles/contatos.css">
+    <link rel="stylesheet" href="../styles/sobremim.css">
+
+
 </head>
 <body>
 
