--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio</title>
     <link rel="icon" href="../assets/mikuHacking.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="../styles/experiencia.css">
+   
 </head>
 <body>
     
@@ -15,7 +15,7 @@
     <h1 class="main-titulo" >Minha Experiência</h1>
     
     <details class="experiencia">
-      <summary><img class="aside-svg" src="../assets/jobs/upquerylogo.jpg">UpQuery</summary>
+      <summary><img  src="../assets/jobs/upquerylogo.jpg">UpQuery</summary>
 
       <div class="conteudo">
           <p><strong>Resumo da empresa:</strong> Empresa de Business Intelligence </p>
