code-readability-improvement

--- a/pages/sobremim.html
+++ b/pages/sobremim.html
@@ -12,9 +12,9 @@
     
 
  <main  class="main">
-    <h1 class="main-titulo" >Sobre Mim</h1>
-    <img class="main-foto" src="../assets/foto.jpg" alt="Foto de Perfil João Vitor">
-   <main class="main-conteudo">
+    <h1 class="sobremim-titulo" >Sobre Mim</h1>
+    <img class="sobremim-foto" src="../assets/foto.jpg" alt="Foto de Perfil João Vitor">
+   <main class="sobremim-conteudo">
       <p>Olá! Meu nome é João Vitor, tenho 20 anos e sou um entusiasta de tecnologia e programação. Desde cedo, sempre tive uma curiosidade natural sobre como as coisas funcionam, o que me levou a explorar o mundo da informática e do desenvolvimento de software.</p>
 
       <p>Atualmente, estou focado em aprimorar minhas habilidades em Backend (Python, Java e SQL) e o básico de Frontend. Gosto de criar projetos que desafiem minha criatividade e me permitam aprender algo novo a cada dia.</p>
@@ -24,7 +24,7 @@
       <p>Estou sempre aberto a novas oportunidades de aprendizado e colaboração. Se você quiser saber mais sobre mim ou discutir possíveis projetos, sinta-se à vontade para entrar em contato!</p>
 
 
-      <img class="main-conteudo-gif" src="../assets/gifs/sqeleto.gif" alt="Esqueleto no gingado">
+      <img class="sobremim-conteudo-gif" src="../assets/gifs/sqeleto.gif" alt="Esqueleto no gingado">
    </main>
 
 
