--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="../styles/experiencia.css">
     <link rel="stylesheet" href="../styles/contatos.css">
     <link rel="stylesheet" href="../styles/sobremim.css">
-
-
+    <link rel="stylesheet" href="../styles/footer.css">
+  
 </head>
 <body>
 
