--- a/pages/footer.html
+++ b/pages/footer.html
@@ -7,8 +7,8 @@
 
    <div>
       
-      <p>© 2026. All rights reserved.</p>
-      <p>Developed by João Vitor de Oliveira Lima</p>
+      <p data-i18n="footer.texto1">© 2026. All rights reserved.</p>
+      <p data-i18n="footer.texto2">Developed by João Vitor de Oliveira Lima</p>
 
    </div>
 
