--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -12,11 +12,11 @@
     
 
  <main  class="main">
-    <h1 class="main-titulo" >Minhas Habilidades</h1>
+    <h1 class="main-titulo" data-i18n="habilidades.titulo" >Minhas Habilidades</h1>
     <img class="main-gif" src="../assets/gifs/futaba.gif" alt="Gif hacker Background" >
     <aside class="main-aside">
         <div class="main-aside-separacao"></div>
-        <h2>Linguagens de Programação: </h2>
+        <h2 data-i18n="habilidades.linguagens">Linguagens de Programação: </h2>
         <div class="main-aside-separacao"></div>
         <ol>
            <li>
@@ -49,7 +49,7 @@
             DBeaver</li>
          </ol>
         <div class="main-aside-separacao"></div>
-        <h2>Linguagens de Consulta: </h2>
+        <h2 data-i18n="habilidades.consulta">Linguagens de Consulta: </h2>
         <div class="main-aside-separacao"></div>
         <ol>
           <li>
@@ -58,7 +58,7 @@
          SQL </li>
         </ol>
         <div class="main-aside-separacao"></div>
-        <h2>Tecnologias: </h2>
+        <h2 data-i18n="habilidades.tecnologias">Tecnologias: </h2>
         <div class="main-aside-separacao"></div>
         <ol>
             <li><img class="aside-svg" src="../assets/svg/vscode.svg">
@@ -67,13 +67,15 @@
                Postman</li>
             <li><img class="aside-svg" src="../assets/svg/intellij.svg">
                IntelliJ</li>
+            <li><img class="aside-svg" src="../assets/svg/jupyter.svg">
+               Jupyter</li>
             <li><img class="aside-svg" src="../assets/svg/xampp.svg">
                Xampp</li>
             <li><img class="aside-svg" src="../assets/svg/git.svg">
                Git</li>
         </ol>
         <div class="main-aside-separacao"></div>
-        <h2>Linguagens de Marcação e Estilo</h2>
+        <h2 data-i18n="habilidades.estilo">Linguagens de Marcação e Estilo</h2>
         <div class="main-aside-separacao"></div>
         <ol>
       <li>
@@ -88,28 +90,28 @@
     </aside>
    <main class="main-conteudo">
 
-    <p> Estudante de <mark>Engenharia de Software</mark> na UniSatc (2024-2028), <mark>5º fase.</mark>
+    <p data-i18n-html="habilidades.main.parte1"> Estudante de <mark>Engenharia de Software</mark> na UniSatc (2024-2028), <mark>5º fase.</mark>
      Além das competências em linguagem de programação, possuo um <mark>inglês fluente.</mark>.
      Tenho um foco maior voltado para o <mark>Backend</mark>, mas também tenho os conhecimentos <mark>básicos em Frontend</mark>. 
     </p>
-    <p>
+    <p data-i18n-html="habilidades.main.parte2">
      Em relação ao Backend, minhas linguagens principais atualmente são <mark>Python</mark> e <mark>Java</mark>.
      Futuramente, também <mark>pretendo desbravar C#</mark>.
     </p>
-    <p>Durante meu percurso na faculdade, fui introduzido a várias tecnologias úteis ao mercado: Utilizo <mark>VsCode</mark> e <mark>Intellij</mark> para programar;
+    <p data-i18n-html="habilidades.main.parte3">Durante meu percurso na faculdade, fui introduzido a várias tecnologias úteis ao mercado: Utilizo <mark>VsCode</mark> e <mark>Intellij</mark> para programar;
       Criação da parte de Backend com <mark>Springboot</mark>; Testes destes endpoints criados com o Spring utilizando <mark>Postman</mark> e criação de banco temporário com o <mark>XAMPP</mark>; Criação de banco de dados com <mark>Postgre</mark> e <mark>Dbeaver</mark>;  E claro, <mark>Git</mark> e <mark>Github</mark> para versionamento de arquivos.</p>
 
-    <p>Possuo um conhecimento mais básico em <mark>React.</mark></p>
+    <p data-i18n-html="habilidades.main.parte4">Possuo um conhecimento mais básico em <mark>React.</mark></p>
 
 
-   <p id="disciplinas"> Minha matriz currícular incluí disciplinas como:</p>
+   <p id="disciplinas" data-i18n="habilidades.main.parte5"> Minha matriz currícular incluí disciplinas como:</p>
       
    <ul class="materias">
      <li>
        <h4>Machine Learning</h4>
      </li>
      <li>
-       <h4>Estrutura de Dados</h4>
+       <h4 data-i18n="habilidades.materias1">Estrutura de Dados</h4>
      </li>
      <li>
        <h4>POO</h4>
@@ -118,26 +120,26 @@
        <h4>Games (Construct 2)</h4>
      </li>
      <li>
-       <h4>Engenharia de requisitos</h4>
+       <h4 data-i18n="habilidades.materias2">Engenharia de requisitos</h4>
      </li> 
       <li>
-       <h4>Banco de dados</h4>
+       <h4 data-i18n="habilidades.materias3">Banco de dados</h4>
       </li>
       <li>
-       <h4>Engenharia de dados</h4>
+       <h4 data-i18n="habilidades.materias4">Engenharia de dados</h4>
      </li>   
       <li>
        <h4>UX design</h4>
      </li>   
       <li>
-       <h4>Soluções Mobile</h4>
+       <h4 data-i18n="habilidades.materias5">Soluções Mobile</h4>
      </li>    
    </ul>
 
-  <p> Além deste portifólio, aqui estão alguns de meus outros repositórios do Github, seguido de vídeos explicativos para cada um deles:</p>
+  <p data-i18n="habilidades.repositorio"> Além deste portifólio, aqui estão alguns de meus outros repositórios do Github, seguido de vídeos explicativos para cada um deles:</p>
   <div class="videos-container" id="videos-container">
    <div class="videos-container-video">
-      <h3>Jogo 2D feito em Construct 2</h3>
+      <h3 data-i18n="habilidades.repositorio.tiulo">Jogo 2D feito em Construct 2</h3>
       <video width="320" height="240"
         controls 
         preload="metadata"
@@ -151,10 +153,10 @@
       <a href="assets/downloads/EclipseApocalypse.capx"
         onclick="event.preventDefault();
         confirmarDownload(this.href, 'EclipseApocalypse')"> Download-arquivo.capx</a>
-      <h5>Ferramentas utilizadas:</h5>
+      <h5 data-i18n="habilidades.repositorio.ferramentas">Ferramentas utilizadas:</h5>
       <p>Construct 2 | Assets</p>
-      <h5>Descrição do projeto:</h5>
-      <p>Jogo endless Topdown desenvolvido na ferramenta Construct 2 durante a disciplina de Games.
+      <h5 data-i18n="habilidades.repositorio.descricao">Descrição do projeto:</h5>
+      <p data-i18n="habilidades.repositorio.descricao2">Jogo endless Topdown desenvolvido na ferramenta Construct 2 durante a disciplina de Games.
         O jogo consiste em um personagem que deve sobreviver o maior tempo possível em um cenário repleto de obstáculos e inimigos que surgem periodicamente. Consiga a maior quantidade de pontos possível antes de ser derrotado.
         A cada nova horda, as criaturas ficam mais rápidas e mais frequentes. Além disso, novos tipos de seres surgem para serem derrotados.
         Fim de jogo obtido apenas quando o jogador morre, sem a possibilidade de salvamento de progresso. 
@@ -164,7 +166,7 @@
     </div>
 
     <div class="videos-container-video">
-      <h3>Backend de sistema de Petshop</h3>
+      <h3 data-i18n="habilidades.repositorio.tiulo2">Backend de sistema de Petshop</h3>
       <video width="320" height="240"
         controls 
         preload="metadata"
@@ -176,10 +178,10 @@
         Seu navegador não suporta a tag de vídeo.
       </video>
       <a href="https://github.com/JoaoVitorOL/PetShopSpringBoot" target="_blank">Github-Link</a>
-      <h5>Ferramentas utilizadas:</h5>
+      <h5 data-i18n="habilidades.repositorio.ferramentas">Ferramentas utilizadas:</h5>
       <p>Java | IntelliJ | SpringBoot | PgAdmin | Postman</p>
-      <h5>Descrição do projeto:</h5>
-      <p>Backend de um sistema de petshop feito em Java com SpringBoot durante a disciplina de Backend, utilizando banco de dados PostgreSQL para armazenamento das informações.
+      <h5 data-i18n="habilidades.repositorio.descricao">Descrição do projeto:</h5>
+      <p data-i18n="habilidades.repositorio.descricao3">Backend de um sistema de petshop feito em Java com SpringBoot durante a disciplina de Backend, utilizando banco de dados PostgreSQL para armazenamento das informações.
         O sistema possui funcionalidades básicas de CRUD (Create, Read, Update, Delete) para gerenciar as tabelas de: donos, pets, veterinários, consultas e vacinas oferecidas pelo petshop.
         Além de ser devidamente organizado entre camadas: Enums, Entity, DTO, Repository, Service e Controller.
         Foi desenvolvido com o intuito de praticar a criação de APIs RESTful e a integração com bancos de dados relacionais.
@@ -187,7 +189,7 @@
     </div>
 
     <div class="videos-container-video">
-     <h3>Advinhador de senha brute force</h3>
+     <h3 data-i18n="habilidades.repositorio.tiulo3">Advinhador de senha brute force</h3>
      <video width="320" height="240"
        controls 
        preload="metadata"
@@ -199,16 +201,16 @@
        Seu navegador não suporta a tag de vídeo.
       </video>
       <a href="https://github.com/JoaoVitorOL/PasswordCracker" target="_blank">Github-Link</a>
-      <h5>Ferramentas utilizadas:</h5>
+      <h5 data-i18n="habilidades.repositorio.ferramentas">Ferramentas utilizadas:</h5>
       <p>Python | Itertools Lib | Multiprocessing Lib | TKinter Lib</p>
-      <h5>Descrição do projeto:</h5>
-      <p>Vasculha a senha digitada por entre o dicionário "RockYou.txt"(Lista de senhas já vazadas na internet).
+      <h5 data-i18n="habilidades.repositorio.descricao">Descrição do projeto:</h5>
+      <p data-i18n="habilidades.repositorio.descricao4" >Vasculha a senha digitada por entre o dicionário "RockYou.txt"(Lista de senhas já vazadas na internet).
         Quando não houver uma correspondência, o programa divide o trabalho entre os núcleos disponíveis do computador e tenta todas as combinações possíveis de caracteres até encontrar a senha correta, sendo limitado apenas pelo número de tentativas de cada processo e o tempo necessário para desvendar a senha. (intuito de informar e ensinar às pessoas o quão frágil sua senha pode ser e como se deve fazer uma senha realmente forte)
       </p>
     </div>
 
     <div class="videos-container-video">
-      <h3>Criptografia simples (não segura)</h3>
+      <h3 data-i18n="habilidades.repositorio.tiulo4">Criptografia simples (não segura)</h3>
       <video width="320" height="240"
         controls 
         preload="metadata"
@@ -220,17 +222,17 @@
          Seu navegador não suporta a tag de vídeo.
       </video>
       <a href="https://github.com/JoaoVitorOL/Encrypto" target="_blank">Github-Link</a>
-      <h5>Ferramentas utilizadas:</h5>
+      <h5 data-i18n="habilidades.repositorio.ferramentas">Ferramentas utilizadas:</h5>
       <p>Python | Secrets lib</p>
-      <h5>Descrição do projeto:</h5>
-      <p>Projeto com foco em aprender métodos de criptografia, desde os mais simples até alguns mais avançados. Como funciona? Insira a mensagem a ser criptografada (ou descriptografada) no bloco de notas "mensagem.txt", execute o código Encrypto.py e selecione o método de criptografia utilizado.
+      <h5 data-i18n="habilidades.repositorio.descricao">Descrição do projeto:</h5>
+      <p data-i18n="habilidades.repositorio.descricao5">Projeto com foco em aprender métodos de criptografia, desde os mais simples até alguns mais avançados. Como funciona? Insira a mensagem a ser criptografada (ou descriptografada) no bloco de notas "mensagem.txt", execute o código Encrypto.py e selecione o método de criptografia utilizado.
       Métodos disponíveis: Cifra de César, Cifra Monoalfabética.
       Métodos a serem feitos: AES.
       </p>
     </div>
 
     <div class="videos-container-video">
-      <h3>Downloader de URLS</h3>
+      <h3 data-i18n="habilidades.repositorio.tiulo5">Downloader de URLS</h3>
       <video width="320" height="240"
         controls 
         preload="metadata"
@@ -242,10 +244,10 @@
         Seu navegador não suporta a tag de vídeo.
       </video>
       <a href="https://github.com/JoaoVitorOL/VideoDownloader"  target="_blank">Github-Link</a>
-      <h5>Ferramentas utilizadas:</h5>
+      <h5 data-i18n="habilidades.repositorio.ferramentas">Ferramentas utilizadas:</h5>
       <p>Python | ffmpeg | yt_dlp lib | urllib.parse lib | validators lib | Tkinter lib</p>
-      <h5>Descrição do projeto:</h5>
-      <p>O programa baixa com a melhor qualidade disponível, qualquer vídeo que tenha uma URL válida.
+      <h5 data-i18n="habilidades.repositorio.descricao">Descrição do projeto:</h5>
+      <p data-i18n="habilidades.repositorio.descricao6">O programa baixa com a melhor qualidade disponível, qualquer vídeo que tenha uma URL válida.
         Suporta downloads de diversas plataformas, como YouTube, Facebook, Instagram, Twitter, TikTok, entre outras.
         O usuário pode escolher o formato do arquivo a ser baixado (vídeo ou apenas extrair o áudio) e se deve ser baixado com legendas em PT-BR (se disponível).
         A interface gráfica é simples e intuitiva, facilitando o uso para qualquer pessoa.
@@ -253,7 +255,7 @@
     </div>
 
     <div class="videos-container-video">
-      <h3>Calculadora com funções extras</h3>
+      <h3 data-i18n="habilidades.repositorio.tiulo6">Calculadora com funções extras</h3>
       <video width="320" height="240"
         controls 
         preload="metadata"
@@ -265,15 +267,15 @@
         Seu navegador não suporta a tag de vídeo.
       </video>
       <a href="https://github.com/JoaoVitorOL/Calculator"  target="_blank">Github-Link</a>
-      <h5>Ferramentas utilizadas:</h5>
+      <h5 data-i18n="habilidades.repositorio.ferramentas">Ferramentas utilizadas:</h5>
       <p>Python | Math lib | TKinter lib</p>
-      <h5>Descrição do projeto:</h5>
-      <p>Calculadora capaz de fazer o cálculo de:
+      <h5 data-i18n="habilidades.repositorio.descricao">Descrição do projeto:</h5>
+      <p data-i18n="habilidades.repositorio.descricao7">Calculadora capaz de fazer o cálculo de:
        variância, desvio padrão, próximo valor na posição da sequência de Fibonacci, fatorial e logaritmos(base 10 e natural) além das operações básicas.</p>
     </div>
 
     <div class="videos-container-video">
-      <h3>Jogo simples de terminal</h3>
+      <h3 data-i18n="habilidades.repositorio.tiulo7">Jogo simples de terminal</h3>
       <video width="320" height="240"
         controls 
         preload="metadata"
@@ -285,10 +287,10 @@
         Seu navegador não suporta a tag de vídeo.
       </video>
       <a href="https://github.com/JoaoVitorOL/Roleta-Russa-Buckshot-roullete"  target="_blank">Github-Link</a>
-      <h5>Ferramentas utilizadas:</h5>
+      <h5 data-i18n="habilidades.repositorio.ferramentas">Ferramentas utilizadas:</h5>
       <p>Python | Random lib </p>
-      <h5>Descrição do projeto:</h5>
-      <p> Jogo de roleta russa que roda no terminal, para dois jogadores. A Mecânica principal é a aleatoriedade e a opção de escolher
+      <h5 data-i18n="habilidades.repositorio.descricao">Descrição do projeto:</h5>
+      <p  data-i18n="habilidades.repositorio.descricao8"> Jogo de roleta russa que roda no terminal, para dois jogadores. A Mecânica principal é a aleatoriedade e a opção de escolher
         atirar em si, (Possibilita a chance de um turno extra) ou em seu oponente, (Para uma vitória mais rápida).</p>
     </div>
   </div>
