--- a/pages/habilidades.html
+++ b/pages/habilidades.html
@@ -150,9 +150,10 @@
         <!-- Fallback content -->
         Seu navegador não suporta a tag de vídeo.
       </video>
-      <a href="assets/downloads/EclipseApocalypse.capx"
+     <!-- <a href="https://joaovitorol.itch.io/ec"
         onclick="event.preventDefault();
-        confirmarDownload(this.href, 'EclipseApocalypse')"> Download-arquivo.capx</a>
+        confirmarDownload(this.href, 'EclipseApocalypse')"> Download-arquivo.capx</a> -->
+      <a href="https://joaovitorol.itch.io/ec" target="_blank">Jogar no itch.io</a>
       <h5 data-i18n-html="habilidades.repositorio.ferramentas">Ferramentas utilizadas:</h5>
       <p>Construct 2 | Assets</p>
       <h5 data-i18n-html="habilidades.repositorio.descricao">Descrição do projeto:</h5>
