--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <script type="module" src="scripts/component-loader.js"></script>
   <script type="module" src="scripts/page-loader.js"></script>
   <script type="module" src="scripts/language-event.js"></script>
-  <script src="scripts/download-confirmation.js"></script>
+  <!-- <script src="scripts/download-confirmation.js"></script> -->
 
 
   
