--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -17,17 +17,17 @@
        <div class="main-section-contatos">
           <img class="section-svg" src="../assets/svg/telefone.svg">
           <p class="contatos-titulo"  data-i18n-html="contatos.telefone">Telefone</p>
-          <p>+55 (48) 991759959</p>
+          <p style="font-family: var(--text-fonte-1)">+55 (48) 991759959</p>
        </div>
        <div class="main-section-contatos">
           <img class="section-svg" src="../assets/svg/email.svg">
           <p class="contatos-titulo">Email</p>
-          <p>joaovitorolcontrateme@gmail.com</p>
+          <p style="font-family: var(--text-fonte-1)">joaovitorolcontrateme@gmail.com</p>
        </div>
        <div class="main-section-contatos">
           <img class="section-svg" src="../assets/svg/linkedin.svg">
           <p class="contatos-titulo">Linkedin</p>
-          <a href="https://www.linkedin.com/in/joãovitordeoliveira-lima" target="_blank">linkedin</a>
+          <a href="https://www.linkedin.com/in/joãovitordeoliveira-lima" target="_blank">Linkedin</a>
         </div>
         <div class="main-section-contatos">
           <img class="section-svg" src="../assets/svg/github.svg">
